# CryptoTracker

./: AppManager.cpp  AppManager.h  CMakeLists.txt  CryptoData.h  DataManager.cpp  DataManager.h  FavoritesManager.cpp  FavoritesManager.h  README.md  main.cpp
